objects/Payment__x.object
<CustomObject>
    <externalDataSource>Online_Orders</externalDataSource>
    <externalName>invoice_payments</externalName>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <externalDeveloperName>amount</externalDeveloperName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <externalDeveloperName>pk</externalDeveloperName>
        <label>Invoice</label>
        <length>80</length>
        <referenceTo>Invoice__x</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Payment_Sent_On__c</fullName>
        <externalDeveloperName>sentDate</externalDeveloperName>
        <label>Payment Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <externalDeveloperName>paymentNumber</externalDeveloperName>
        <label>Payment Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Key__c</fullName>
        <externalDeveloperName>sk</externalDeveloperName>
        <label>Sort Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Payment</label>
    <pluralLabel>Payments</pluralLabel>
</CustomObject>